# AMoon-Eclipse

./: LICENSE  README.md
apps/desktop/wails-app/frontend/src/pages/: LoginPage.tsx
apps/mobile/: eas.json
apps/mobile2/android/app/: build.gradle
apps/mobile2/android/app/src/main/cpp/: CMakeLists.txt  integrity.cpp  integrity_check.cpp
apps/mobile2/android/app/src/main/java/com/amoon/eclipse/: MainApplication.kt
apps/mobile2/android/app/src/main/java/com/amoon/eclipse/integrity/: IntegrityModule.java  IntegrityPackage.java
apps/mobile2/android/app/src/main/java/com/amooneclipse/: IntegrityModule.java  IntegrityPackage.java
apps/mobile2/app/: auth.tsx
apps/mobile2/app/(auth)/: login.tsx  recover-key.tsx
apps/mobile2/ios/: IntegrityModule.mm
apps/mobile2/src/hooks/: useGroupCall.ts  useVoiceCall.ts
apps/mobile2/src/lib/: api.ts  secureRequest.ts
apps/web/src/hooks/: useVoiceCall.ts
apps/web/src/lib/: api.ts
apps/web/src/stores/: authStore.ts
